[package]
name = "reccedns"
authors = ["Alex Ogden"]
version = "0.14.5"
repository = "https://github.com/alexogden/reccedns"
license = "GPL-3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "env"] }
colored = "3.0.0"
ctrlc = "3.5.1"
dashmap = "6.1.0"
indicatif = "0.18.2"
num_cpus = "1.17.0"
num_enum = "0.7.5"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = {version = "0.12.24", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
